k8s/croneye_app_k8s.yml
#Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: croneye

---
#Backend deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: croneye
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: croneye/api:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000

---
#Backend service
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: croneye
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000

---
#Frontend deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: croneye
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: croneye/client:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000

---
#Frontend service
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: croneye
spec:
  selector:
    app: frontend
  ports:
  - port: 5000
    targetPort: 5000

---
#Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: croneye-ingress
  namespace: croneye
  labels:
    name: croneye-ingress
spec:
  rules:
  - host: <backend_host>
    http:
      paths:
      - pathType: Prefix
        path: "/croneye"
        backend:
          service:
            name: backend
            port: 
              number: 5000
  
  - host: <frontend_host>
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port: 
              number: 5000
